# react-native-jsi-udp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-jsi-udp.podspec  tsconfig.build.json  tsconfig.json  turbo.json
.agents/skills/maestro/: SKILL.md
.agents/skills/maestro/references/: maestro.md
.claude/skills/: maestro
.github/workflows/: native.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/jsiudp/: JsiUdpModule.java  JsiUdpPackage.java
cpp/: helper.h  react-native-jsi-udp.cpp  react-native-jsi-udp.h
example/: app.json  metro.config.js  package.json  test_latency.py
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/jsiudpexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/jsiudpexample/: MainActivity.java  MainActivity.kt  MainApplication.java  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/jsiudpexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/JsiUdpExample/: AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/JsiUdpExample.xcodeproj/: project.pbxproj
example/ios/JsiUdpExample.xcodeproj/xcshareddata/xcschemes/: JsiUdpExample.xcscheme
example/ios/JsiUdpExample.xcworkspace/: contents.xcworkspacedata
example/ios/JsiUdpExampleTests/: JsiUdpExampleTests.m
example/maestro/: test-lifecycle.yaml
example/src/: App.tsx
example/src/tests/: address.ts  broadcast.ts  errors.ts  helper.ts  index.ts  latency-server-bridge.ts  latency-server.ts  lifecycle.ts  multicast.ts  options.ts  send-receive.ts  stress.ts  suspend-resume.ts
ios/: JsiUdp.h  JsiUdp.mm
ios/JsiUdp.xcodeproj/: project.pbxproj
src/: index.tsx  types.d.ts
